base/namespaces/argo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
  labels:
    cert-manager-tls: argo
