base/namespaces/backup.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backup
  # labels:
  #   cert-manager-tls: storage

# ---
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: default
#   namespace: storage
# spec:
#   podSelector: {}
#   ingress:
#   - from:
#     # Only allow ingress from K8S
#     - ipBlock:
#         cidr: 10.0.0.0/8
#   egress:
#   - to:
#     # Only allow egress to K8S
#     - ipBlock:
#         cidr: 10.0.0.0/8
#   policyTypes:
#     - Ingress
#     - Egress
