base/namespaces/cells.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cells
  labels:
    cert-manager-tls: cells
