base/namespaces/filebrowser.yml
apiVersion: v1
kind: Namespace
metadata:
  name: filebrowser
  labels:
    cert-manager-tls: filebrowser
