base/namespaces/flame.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flame
  labels:
    cert-manager-tls: flame
