base/namespaces/jellyfin.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    cert-manager-tls: jellyfin
