base/namespaces/jot.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jot
    #   labels:
    #     cert-manager-tls: jot
