base/namespaces/pihole.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    cert-manager-tls: pihole
