base/namespaces/tdarr.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tdarr
    #  labels:
    #    cert-manager-tls: tdarr
