base/namespaces/vpn-gateway.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn-gateway
  labels:
    gateway: "true"
    cert-manager-tls: vpn-gateway
