base/namespaces/cert-manager.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default
  namespace: cert-manager
spec:
  podSelector: {}
  ingress:
  - from:
    # Only allow ingress from K8S (admission controller)
    - ipBlock:
        cidr: "10.0.0.0/8"
  egress:
  - to:
    # Allow all egress (lets encrypt)
    - ipBlock:
        cidr: "0.0.0.0/0"
  policyTypes:
    - Ingress
    - Egress
