base/namespaces/monitoring.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    cert-manager-tls: monitoring

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default
  namespace: monitoring
spec:
  podSelector: {}
  egress:
  - to:
    # Only allow egress to K8S
    - ipBlock:
        cidr: "10.0.0.0/8"
  policyTypes:
    - Ingress
    - Egress
